@@ -2774,6 +2774,29 @@ stopifnot(identical(x2[[1]], 1:2))
 ## still was "array" in R <= 3.6.0
 
 
+## vcov(<quasi>, dispersion = *) -- PR#17571
+counts <- c(18,17,15,20,10,20,25,13,12)
+treatment <- gl(3,3)
+outcome <- gl(3,1,9)
+## Poisson and Quasipoisson
+ poisfit <- glm(counts ~ outcome + treatment, family = poisson())
+qpoisfit <- glm(counts ~ outcome + treatment, family = quasipoisson())
+spois     <- summary( poisfit)
+sqpois    <- summary(qpoisfit)
+sqpois.d1 <- summary(qpoisfit, dispersion=1)
+SE1 <- sqrt(diag(V <- vcov(poisfit)))
+stopifnot(exprs = { ## Same variances and same as V
+    all.equal(vcov(spois), V)
+    all.equal(vcov(qpoisfit, dispersion=1), V) ## << was wrong
+    all.equal(vcov(sqpois.d1), V)
+    all.equal(spois    $coefficients[,"Std. Error"], SE1)
+    all.equal(sqpois.d1$coefficients[,"Std. Error"], SE1)
+    all.equal(sqpois   $coefficients[,"Std. Error"],
+              sqrt(sqpois$dispersion) * SE1)
+})
+## vcov(. , dispersion=*) was wrong on R versions 3.5.0 -- 3.6.0
+
+
 
 ## keep at end
 rbind(last =  proc.time() - .pt,
